# auth-microservice

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  build.rs
locales/: en.yml
src/: client.rs  main.rs  server.rs
src/config/: mod.rs  server.rs  session_manager.rs  tokenizer.rs
