[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
sentry = "0.31.0"
protobuf = "3.2.0"
tonic = "0.9.2"
tonic-reflection = "0.9.1"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
log = "0.4.17"
paseto = "2.0.2+1.0.3"
bcrypt = "0.14.0"
ring = { version = "^0.16", features = ["std", "default"] }
rand = "0.8.5"
regex = "1.7.3"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
grpc = "0.8.3"
once_cell = "1.17.1"
rust-i18n = "1"
mongodb = { version = "2.4.0", features = ["bson-chrono-0_4"] }
serde_json = "1.0.95"


[build-dependencies]
protobuf = "3.2.0"
tonic-build = "0.9.2"

[package.metadata.i18n]
available-locales = ["en"]